cleaned up commented out codeand adjusted the info sections. i hope this fixes the view on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,10 +18,9 @@ nav {
   -webkit-box-orient: horizontal;
   display: flex;
   width: 100%;
-  /*margin: 0 auto;*/
+  margin: 0 auto;
   flex: 0 1 auto;
   justify-content: flex-end;
-  /*align-items: center;*/
   background-color: #FCE5AD;
   background-color: #E4E4E4;
   position: fixed;
@@ -38,17 +37,13 @@ nav a {
 .icon-book-read-streamline {
   text-decoration: none;
   margin-top: 0.3em;
-  /*equals 29px*/
   font-size: 2.9em;
-  /*float: right;*/
   color: #72716f;
   margin-right: 0.3em;
   margin-left: 0.1em;
-
 }
 
 .icon-book-read-streamline:hover {
-  /*color: #F82D39;*/
   color: #B1D25D;
 }
 
@@ -68,8 +63,6 @@ nav a {
   display: inline-block;
   margin-top: 0.2em;
   font-size: 3.1em;
-  /*float: left;*/
-  /*margin-left: 1.3em;*/
   text-decoration: none;
   margin-right: 0.1em;
 }
@@ -83,7 +76,6 @@ nav a {
   margin-top: 0.2em;
   text-decoration: none;
   font-size: 3.1em;
-  /*padding: 0.2em 0 0 1.5em;*/
   color: #72716f;
   margin-right: 0.3em;
   margin-left: 0.1em;
@@ -105,25 +97,18 @@ nav a {
   padding-top: 1%;
   padding-left: 1%;
   padding: 170px 29%;
-  /*padding: 10em 3em 3em 27em;*/
 }
-/*using display/flex throws cursor further down the screen*/
 .element {
-  /*display: flex;
-  flex: 0 1 auto;*/
   position: relative;
   text-align: right;
-  /*z-index: 100;*/
   z-index: 1;
   font-family: 'Raleway', sans-serif;
   font-size: 1.5em;
   color: white;
-    /*color: #B1D25D;*/
   line-height: 1.4em;
   letter-spacing: 0.2em;
   max-width: 75%;
   min-height: 15em;
-  /*min-width: 15em;*/
   perspective: 1000px;
   margin: 1em 1em;
   transform: perspective(25em) rotateX(-30deg);
@@ -131,16 +116,12 @@ nav a {
 }
 
 .typed-cursor {
-  /*display: flex;
-  flex: 0 1 auto;*/
   opacity: 1;
   -webkit-animation: blink 0.7s infinite;
   -moz-animation: blink 0.7s infinite;
   animation: blink 1.4s 1.4s infinite;
   color: white;
-    /*color: #B1D25D;*/
   font-size: 1.5em;
-
 }
 
 @keyframes blink {
@@ -161,19 +142,11 @@ nav a {
   100% {opacity:1;}
 }
 
-/*.bkgnd-img {
-  position: absolute;
-
-}*/
 .grid-hero {
   display: flex;
   font-family: 'Raleway', sans-serif;
   text-align: left;
-  /*padding: 3%;*/
-  /*height: 155px;*/
-  /*height: 2%;*/
   line-height: 5%;
-  /*padding-top: 1.1em;*/
   padding-top: 1%;
   padding-right: 5%;
   background-color: #edfefd;
@@ -183,7 +156,6 @@ nav a {
 .grid-dets {
   flex: 1;
   padding: 3%;
-
 }
 
 .grid-job-title {
@@ -206,19 +178,6 @@ nav a {
   text-align: left;
 
 }
-
-/*.icon-angle-down {
-  text-decoration: none;
-  font-size: 3.7em;
-  color: #72716f;
-  padding: .9em;
-  margin-top: 2.7em;
-  position: fixed;
-}
-
-.icon-angle-down:hover {
-  color: #F82D39;
-}*/
 
 .flex-container {
   -webkit- for android, chrome, iOS, safari
@@ -251,7 +210,6 @@ nav a {
   align-content: right;
   background-color: white;
   padding: 5%;
-
 }
 
 .portfolio-title {
@@ -260,11 +218,9 @@ nav a {
   text-shadow: -1px -1px #B1D25D;
   font-size: 2.9em;
   text-align: left;
-  /*padding-right: 2.1em;*/
   margin-top: 2%;
   padding: 4%;
   font-weight: bolder;
-
 }
 
 .project-container {
@@ -282,7 +238,6 @@ nav a {
 }
 
 .project-dets {
-  /*position: absolute;*/
   width: 50%;
   margin-left: 46%;
   font-family: 'Lora', serif;
@@ -291,18 +246,21 @@ nav a {
   color: #72716f;
   line-height: 1.4em;
   font-size: 19px;
-  /*this margin top is what i think is causing safari to look the way it has*/
-  /*margin-top: -5.3em;*/
   margin-top: 8%;
-
 }
 
 .project-dets:hover {
   color: #595856;
-
 }
 .project-bio {
  margin-bottom: 3%;
+ width: 100%;
+ font-family: 'Lora', serif;
+ font-family: 'Raleway', sans-serif;
+ color:  #72716f;
+ line-height: 1.4em;
+ font-size: 19px;
+ #72716f
 }
 .project-bio-2 {
  margin-bottom: 3%;
@@ -320,8 +278,6 @@ nav a {
   font-weight: bolder;
 }
 
-
-
 .cities {
   color: #B1D25D;
 }
@@ -334,8 +290,7 @@ nav a {
   color: #A7ABAC;
   line-height: 1.4em;
   font-size: 19px;
-  margin-top: 5.3em;
-  margin-bottom: 3.3em;
+  margin-top: 8%;
 }
 
 .p-space:hover {
@@ -359,13 +314,6 @@ nav a {
 .to-sites-2:hover {
   color: #A7ABAC;
 }
-/*footer {
-  disply: flex;
-  flex-direction: column;
-  min-height: 2.9em;
-  background-color: #DAE4E5;
-  text-align: center;
-}*/
 
 @keyframes type2 {
   0%{width:0;}
